k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fcs-developer-portal
  namespace: fcs-developer-portal
spec:
  selector:
    app.kubernetes.io/name: fcs-developer-portal
  ports:
    - name: http
      port: 80
      targetPort: http
