k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fcs-developer-portal
  namespace: fcs-developer-portal
  annotations:
    kubernetes.io/ingress.class: fcs-traefik
spec:
  ingressClassName: fcs-traefik
  tls:
    - hosts: [fcs-devportal.flaviojcf.com.br]
      secretName: fcs-devportal-tls
  rules:
    - host: fcs-devportal.flaviojcf.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fcs-developer-portal
                port:
                  name: http
